syntax = "proto3";

package kritor.guild;

option csharp_namespace = "Kritor.Guild";
option java_multiple_files = true;
option java_package = "io.kritor.guild";
option go_package = "grpc/kritor/guild";

import "Protos/guild/guild_data.proto";

service GuildService {
  rpc GetBotInfo(GetBotInfoRequest) returns (GetBotInfoResponse); // 获取BOT资料
  rpc GetChannelList(GetChannelListRequest) returns (GetChannelListResponse); // 获取频道列表
  rpc GetGuildMetaByGuest(GetGuildMetaByGuestRequest) returns (GetGuildMetaByGuestResponse); // 通过访客获取频道元数据
  rpc GetGuildChannelList(GetGuildChannelListRequest) returns (GetGuildChannelListResponse); // 获取子频道列表
  rpc GetGuildMemberList(GetGuildMemberListRequest) returns (GetGuildMemberListResponse); // 获取频道成员列表
  rpc GetGuildMember(GetGuildMemberRequest) returns (GetGuildMemberResponse); // 单独获取频道成员资料
  rpc SendChannelMessage(SendChannelMessageRequest) returns (SendChannelMessageResponse); // 发送信息到子频道
  rpc GetGuildFeedList(GetGuildFeedListRequest) returns (GetGuildFeedListResponse); // 获取频道帖子广场帖子
  rpc GetGuildRoleList(GetGuildRoleListRequest) returns (GetGuildRoleListResponse); // 获取频道角色列表
  rpc DeleteGuildRole(DeleteGuildRoleRequest) returns (DeleteGuildRoleResponse); // 删除频道身份组
  rpc SetGuildMemberRole(SetGuildMemberRoleRequest) returns (SetGuildMemberRoleResponse); // 设置用户在频道中的角色
  rpc UpdateGuildRole(UpdateGuildRoleRequest) returns (UpdateGuildRoleResponse); // 修改频道角色
  rpc CreateGuildRole(CreateGuildRoleRequest) returns (CreateGuildRoleResponse); // 创建频道角色
}

// 获取BOT资料请求
message GetBotInfoRequest {
}

// 获取BOT资料响应
message GetBotInfoResponse {
  string nickname = 1; // 昵称
  uint64 tiny_id = 2; // bot的频道id
  string avatar = 3; // 头像
}

// 获取频道列表请求
message GetChannelListRequest {
}

// 获取频道列表响应
message GetChannelListResponse {
  repeated GuildInfo get_guild_list = 1; // 频道列表
}

// 通过访客获取频道元数据请求
message GetGuildMetaByGuestRequest {
  uint64 guild_id = 1; // 频道ID
}

// 通过访客获取频道元数据响应
message GetGuildMetaByGuestResponse {
  uint64 guild_id = 1; // 频道ID
  string guild_name = 2; // 频道名称
  string guild_profile = 3; // 频道简介
  uint64 create_time = 4; // 创建时间
  uint64 max_member_count = 5; // 最大成员数量
  uint64 max_robot_count = 6; // 最大机器人数量
  uint64 max_admin_count = 7; // 最大管理员数量
  uint64 member_count = 8; // 当前成员数量
  uint64 owner_id = 9; // 频道所有者ID
  string guild_display_id = 10; // 频道显示ID
}

// 获取子频道列表请求
message GetGuildChannelListRequest {
  uint64 guild_id = 1; // 频道ID
  bool refresh = 2; // 是否刷新数据，默认false
}

// 获取子频道列表响应
message GetGuildChannelListResponse {
  repeated ChannelInfo channels_info = 1; // 子频道列表
}

// 获取频道成员列表请求
message GetGuildMemberListRequest {
  uint64 guild_id = 1; // 频道ID
  string next_token = 2; // 不提供则从首页开始获取
  bool all = 3; // 是否一次性获取完所有成员，默认false
  bool refresh = 4; // 是否刷新数据，默认false
}

// 获取频道成员列表响应
message GetGuildMemberListResponse {
  repeated MemberInfo members_info = 1; // 成员列表
  string next_token = 2; // 下一页的token
  bool finished = 3; // 是否已经获取完所有成员
}

// 单独获取频道成员资料请求
message GetGuildMemberRequest {
  uint64 guild_id = 1; // 频道ID
  uint64 tiny_id = 2; // 成员tinyId
}

// 单独获取频道成员资料响应
message GetGuildMemberResponse {
  MemberProfile member_info = 1; // 成员资料
}

// 发送信息到子频道请求
message SendChannelMessageRequest {
  uint64 guild_id = 1; // 频道ID
  uint64 channel_id = 2; // 子频道ID
  string message = 3; // 消息体
  int32 retry_cnt = 4; // 最大重试次数
  int64 recall_duration = 5; // 自动撤回间隔
}

// 发送信息到子频道响应
message SendChannelMessageResponse {
  string message_id = 1; // 消息ID
  int64 time = 2; // 时间
}

// 获取频道帖子广场帖子请求
message GetGuildFeedListRequest {
  uint64 guild_id = 1; // 频道ID
  uint32 from = 2; // 开始获取的位置
}

// 获取频道帖子广场帖子响应
message GetGuildFeedListResponse {
  bytes data = 1; // 该请求携带了大量原生响应数据，无法详细介绍，请自行测试！
}

// 获取频道角色列表请求
message GetGuildRoleListRequest {
  uint64 guild_id = 1; // 频道ID
}

// 获取频道角色列表响应
message GetGuildRoleListResponse {
  repeated RoleInfo roles_info = 1; // 角色列表
}

// 删除频道身份组请求
message DeleteGuildRoleRequest {
  uint64 guild_id = 1; // 频道ID
  uint64 role_id = 2; // 角色ID
}

// 删除频道身份组响应
message DeleteGuildRoleResponse {
  // 无返回值
}

// 设置用户在频道中的角色
message SetGuildMemberRoleRequest {
  uint64 guild_id = 1; // 频道ID
  uint64 role_id = 2; // 角色ID
  bool set = 3; // 设置还是移除，默认false
  repeated string tiny_ids = 4; // 用户tinyId列表
}

// 设置用户在频道中的角色响应
message SetGuildMemberRoleResponse {
  // 无返回值
}

// 修改频道角色请求
message UpdateGuildRoleRequest {
  uint64 guild_id = 1; // 频道ID
  uint64 role_id = 2; // 角色ID
  string name = 3; // 名称
  int64 color = 4; // 颜色ARGB
}

// 修改频道角色响应
message UpdateGuildRoleResponse {
  // 无返回值
}

// 创建频道角色请求
message CreateGuildRoleRequest {
  uint64 guild_id = 1; // 频道ID
  string name = 2; // 名称
  int64 color = 3; // 颜色ARGB
}

// 创建频道角色响应
message CreateGuildRoleResponse {
  uint64 role_id = 1; // 角色ID
}
